tests/NormalTests/paczka1/small_fuzzy/60390534.err
Error in line 2: KpM6DN A617 24,5
Error in line 6: DcF6wEUhi S240 54,9
Error in line 3: KpM6DN A719 50,1
Error in line 10: xZJirJMjWR A719 61,1
